tests/error/02_lexer_unterminated_string.mire
import std

pub fn main: () {
    set x = "unclosed string
}